fix(food): utiliser la recherche POST USDA pour les suggestions